Completed search functionality

--- a/app/src/main/res/layout/item_recipe_entry.xml
+++ b/app/src/main/res/layout/item_recipe_entry.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/recipe_entry"
@@ -9,38 +8,110 @@
 
     <ImageView
         android:id="@+id/recipe_image"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:src="@drawable/ic_launcher_background"
-        tools:srcCompat="@mipmap/ic_launcher"
-        android:contentDescription="image" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/recipe_image"
+        android:maxHeight="108dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/image_text_guideline"
+        style="@style/ListEntryImage"
+        tools:src="@drawable/ic_launcher_foreground"
+        tools:srcCompat="@mipmap/ic_launcher" />
 
     <TextView
         android:id="@+id/recipe_name"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        tools:text="Spaghetti"/>
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/image_text_guideline"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        style="@style/LargeOrangeText"
+        tools:text="Spaghetti" />
 
     <TextView
         android:id="@+id/recipe_source"
         android:layout_width="0dp"
-        android:layout_height="0dp" />
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/recipe_name"
+        app:layout_constraintStart_toEndOf="@id/image_text_guideline"
+        app:layout_constraintEnd_toEndOf="parent"
+        style="@style/TinyBoldText"
+        tools:text="Food Network"/>
 
     <TextView
         android:id="@+id/recipe_ingredient_count"
-        android:layout_width="0dp"
-        android:layout_height="0dp" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toStartOf="@id/recipe_ingredient_count_label"
+        app:layout_constraintTop_toBottomOf="@id/recipe_source"
+        app:layout_constraintBottom_toBottomOf="parent"
+        style="@style/MediumText"
+        android:text="@string/empty_text"
+        tools:text="10"/>
+
+    <TextView
+        android:id="@+id/recipe_ingredient_count_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/image_text_guideline"
+        app:layout_constraintEnd_toStartOf="@id/recipe_calorie_count_label"
+        app:layout_constraintTop_toBottomOf="@id/recipe_source"
+        app:layout_constraintBottom_toBottomOf="parent"
+        style="@style/MicroText"
+        android:text="@string/ingredients"/>
 
     <TextView
         android:id="@+id/recipe_calorie_count"
-        android:layout_width="0dp"
-        android:layout_height="0dp" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toStartOf="@id/recipe_calorie_count_label"
+        app:layout_constraintTop_toBottomOf="@id/recipe_source"
+        app:layout_constraintBottom_toBottomOf="parent"
+        style="@style/MediumText"
+        android:text="@string/empty_text"
+        tools:text="320"/>
+
+    <TextView
+        android:id="@+id/recipe_calorie_count_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/recipe_ingredient_count_label"
+        app:layout_constraintEnd_toStartOf="@id/recipe_cooking_time_label"
+        app:layout_constraintTop_toBottomOf="@id/recipe_source"
+        app:layout_constraintBottom_toBottomOf="parent"
+        style="@style/MicroText"
+        android:text="@string/calories"/>
 
     <TextView
         android:id="@+id/recipe_cooking_time"
-        android:layout_width="0dp"
-        android:layout_height="0dp" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toStartOf="@id/recipe_cooking_time_label"
+        app:layout_constraintTop_toBottomOf="@id/recipe_source"
+        app:layout_constraintBottom_toBottomOf="parent"
+        style="@style/MediumText"
+        android:text="@string/empty_text"
+        tools:text="70"/>
 
+    <TextView
+        android:id="@+id/recipe_cooking_time_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/recipe_calorie_count_label"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/recipe_source"
+        app:layout_constraintBottom_toBottomOf="parent"
+        style="@style/MicroText"
+        android:text="@string/minutes"/>
+
+    <android.support.constraint.Guideline
+        android:id="@+id/image_text_guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.35" />
 
 
 </android.support.constraint.ConstraintLayout>
